--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["poetry==0.12.17"]
+requires = ["poetry==1.0.3"]
 build-backend = "poetry.masonry.api"
 
 
@@ -16,7 +16,9 @@ authors = ["Marcin Josiński"]
 
 
 [tool.poetry.dependencies]
-python = "3.7.4"
+python = "3.7.6"
+# TODO: remove after https://github.com/python-poetry/poetry/issues/2042
+importlib-metadata = "<1.2.0,>=1.1.3"
 django = "^2.2"
 djangorestframework = "^3.11"
 djangorestframework-camel-case = "^1.1"
