--- a/.drone.yml
+++ b/.drone.yml
@@ -78,11 +78,11 @@ steps:
       - "rsync -e 'ssh -o StrictHostKeyChecking=no' -rlptgDvz --exclude-from 'exclude-list-rsync.txt' . ubuntu@app-skyexpo:/home/ubuntu/skyexpo"
       - ssh -A ubuntu@app-skyexpo 'cd /home/ubuntu/skyexpo; docker-compose -f docker-compose.yml -f docker-compose.prod.yml build'
       - ssh -A ubuntu@app-skyexpo 'cd /home/ubuntu/skyexpo; docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d'
-#    when:
-#      branch:
-#        - develop
-#      event:
-#        - push
+    when:
+      branch:
+        - develop
+      event:
+        - push
 
 services:
   - name: run docker service
