--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -44,3 +44,25 @@ services:
       start_period: 1m
     expose:
       - 8000
+
+  celery-worker:
+    <<: *web
+    container_name: skyexpo-celery
+    depends_on:
+      - web
+      - db
+      - redis
+    command: celery -A server worker -l info
+
+  celery-flower:
+    <<: *web
+    container_name: skyexpo-flower
+    depends_on:
+      - web
+      - db
+      - redis
+    environment:
+     - FLOWER_PORT=8080
+    expose:
+      - 8080
+    command: celery -A server flower
