--- a/web-app/package.json
+++ b/web-app/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
+    "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
     "yup": "^0.27.0"
   },
