--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -11,13 +11,17 @@ dependencies:
   redux: ^4.0.0
   flutter_redux: ^0.6.0
   redux_epics: ^0.13.0
+  redux_remote_devtools: ^1.0.2
   reselect: ^0.4.0
   http: ^0.12.0+4
   cupertino_icons: ^0.1.2
+  json_annotation: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.2.5
+  build_runner: ^1.8.0
 
 flutter:
   uses-material-design: true
