add env to allowed_hosts - it assigns an ip for mobile emulator in the dev environment

--- a/backend/config/.env.template
+++ b/backend/config/.env.template
@@ -52,3 +52,8 @@ REDIS_PASSWORD=123qweasd
 # === Email ===
 EMAIL_HOST=mailhog
 EMAIL_PORT=1025
+
+# === Mobile ===
+# Used only in the development environment
+
+EMULATOR_HOST=
