--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   http: ^0.12.0+4
   cupertino_icons: ^0.1.2
   json_annotation: ^3.0.1
+  flutter_flipperkit: ^0.0.21
+  flipperkit_http_interceptor: ^0.0.1
 
 dev_dependencies:
   flutter_test:
