--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -6,24 +6,27 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^0.1.2
+  flutter_dotenv: ^2.1.0
   flutter:
     sdk: flutter
-  redux: ^4.0.0
+  flutter_flipperkit: ^0.0.21
+  flipperkit_http_interceptor: ^0.0.1
   flutter_redux: ^0.6.0
+  http: ^0.12.0+4
+  json_annotation: ^3.0.1
+  redux: ^4.0.0
   redux_epics: ^0.13.0
   redux_remote_devtools: ^1.0.2
   reselect: ^0.4.0
-  http: ^0.12.0+4
-  cupertino_icons: ^0.1.2
-  json_annotation: ^3.0.1
-  flutter_flipperkit: ^0.0.21
-  flipperkit_http_interceptor: ^0.0.1
 
 dev_dependencies:
+  build_runner: ^1.8.0
   flutter_test:
     sdk: flutter
   json_serializable: ^3.2.5
-  build_runner: ^1.8.0
 
 flutter:
+  assets:
+    - ../backend/config/.env
   uses-material-design: true
