--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.8.0
+  mockito: ^4.1.1
   flutter_test:
     sdk: flutter
   json_serializable: ^3.2.5
