--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  built_value: ^7.0.9
   cupertino_icons: ^0.1.2
   flutter_dotenv: ^2.1.0
   flutter:
@@ -22,11 +23,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.8.0
-  mockito: ^4.1.1
+  built_value_generator: ^7.0.9
   flutter_test:
     sdk: flutter
   json_serializable: ^3.2.5
-
+  mockito: ^4.1.1
 flutter:
   assets:
     - .env
