--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,12 +1,11 @@
 name: mobile
-description: A new Flutter project.
+description: Skyexpo.
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  built_value: ^7.0.9
   cupertino_icons: ^0.1.2
   flutter_dotenv: ^2.1.0
   flutter:
@@ -20,14 +19,15 @@ dependencies:
   redux_epics: ^0.13.0
   redux_remote_devtools: ^1.0.2
   reselect: ^0.4.0
+  vnum: ^1.2.4
 
 dev_dependencies:
   build_runner: ^1.8.0
-  built_value_generator: ^7.0.9
   flutter_test:
     sdk: flutter
   json_serializable: ^3.2.5
   mockito: ^4.1.1
+  reflectable: ^2.0.10+1
 flutter:
   assets:
     - .env
