--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^0.1.2
+  equatable: ^1.1.1
   flutter_dotenv: ^2.1.0
   flutter:
     sdk: flutter
