--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_redux: ^0.6.0
   http: ^0.12.0+4
   json_annotation: ^3.0.1
+  percent_indicator: "^2.1.1"
   redux: ^4.0.0
   redux_epics: ^0.13.0
   redux_remote_devtools: ^1.0.2
