--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flipperkit_http_interceptor: ^0.0.1
   flutter_redux: ^0.6.0
   http: ^0.12.0+4
+  image_picker: ^0.6.4
   json_annotation: ^3.0.1
   percent_indicator: "^2.1.1"
   redux: ^4.0.0
