--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -29,10 +29,11 @@ radon-no-assert = True
 exclude = .git,__pycache__,.venv,.eggs,*.egg
 
 # Disable some pydocstyle checks:
+# TODO: Remove NIP323 from ignored after installing mypy version 0.770 or higher
 ignore = D100, D102, D104, D105, D106, D401, E121, X100, W504, WPS110, WPS115, WPS121,
          WPS305, WPS432, WPS306, RST303, RST304, NIP103, S105, S106, DAR103, DAR203,
          D400, D205, WPS442, WPS202, WPS226, DJ08, WPS204, D103, WPS337, D107,
-         WPS201
+         WPS201, WPS348, NIP323
 
 # Docs: https://github.com/snoack/flake8-per-file-ignores
 # You can completely or partially disable our custom checks,
@@ -110,7 +111,8 @@ no_implicit_optional = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
-warn_unreachable = True
+# TODO: Change back to True after installing mypy version 0.770 or higher
+warn_unreachable = False
 warn_no_return = True
 
 plugins =
