--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   redux_epics: ^0.13.0
   redux_remote_devtools: ^1.0.2
   reselect: ^0.4.0
+  union: ^0.0.3+1
   vnum: ^1.2.4
 
 dev_dependencies:
