--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["poetry==1.0.5"]
+requires = ["poetry==1.0.3"]
 build-backend = "poetry.masonry.api"
 
 
@@ -16,7 +16,7 @@ authors = ["Marcin Josiński"]
 
 
 [tool.poetry.dependencies]
-python = "3.8.2"
+python = "3.7.6"
 # TODO: remove after https://github.com/python-poetry/poetry/issues/2042
 importlib-metadata = "<1.2.0,>=1.1.3"
 django = "^3.0"
@@ -24,7 +24,7 @@ djangorestframework = "^3.11"
 djangorestframework-camel-case = "^1.1"
 djangorestframework-simplejwt = "^4.4"
 django-split-settings = "^1.0"
-django-axes = "^5.3"
+django-axes = "^5.2"
 django-csp = "^3.6"
 django-health-check = "^3.12"
 django-http-referrer-policy = "^1.0"
@@ -32,7 +32,7 @@ django-feature-policy = "^3.2"
 django-countries = "^6.1"
 django-phonenumber-field = "^4.0"
 django-cors-headers = "^3.2"
-phonenumbers = "^8.12"
+phonenumbers = "^8.11"
 glom = "^19.10"
 Pillow = "^7.0"
 psycopg2 = "^2.8"
@@ -45,7 +45,10 @@ pyrsistent = "0.14.2"
 celery = "^4.4"
 redis = "^3.3"
 flower = "^0.9"
+# TODO: drf-yasg should be in dev-dependecies but views currently need decorator from this package
+# Try to resolve it somehow so we can move drf-yasg into dev-dependencies.
 drf-yasg = "^1.17"
+typing-extensions = "^3.7"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^2.1"
@@ -53,17 +56,18 @@ django-querycount = "^0.7"
 django-extensions = "^2.2"
 nplusone = "^1.0"
 
-wemake-python-styleguide = "^0.14"
+wemake-python-styleguide = "^0.13.2"
 flake8-pytest = "^1.3"
 flake8-pytest-style = "^0.1.3"
 flake8-django = "^0.0.4"
+xenon = "^0.5"
 nitpick = "^0.22"
 
 pytest = "^5.3"
 pytest-django = "^3.8"
 pytest-cov = "^2.8"
 pytest-randomly = "^3.2"
-pytest-deadfixtures = "^2.2"
+pytest-deadfixtures = "^2.1"
 pytest-testmon = "^1.0"
 pytest-timeout = "^1.3"
 factory_boy = "^2.12"
