--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -29,11 +29,10 @@ radon-no-assert = True
 exclude = .git,__pycache__,.venv,.eggs,*.egg
 
 # Disable some pydocstyle checks:
-# TODO: Remove NIP323 from ignored after installing mypy version 0.770 or higher
 ignore = D100, D102, D104, D105, D106, D401, E121, X100, W504, WPS110, WPS115, WPS121,
          WPS305, WPS432, WPS306, RST303, RST304, NIP103, S105, S106, DAR103, DAR203,
          D400, D205, WPS442, WPS202, WPS226, DJ08, WPS204, D103, WPS337, D107,
-         WPS201, WPS348, NIP323
+         WPS201, WPS348, WPS323, WPS235
 
 # Docs: https://github.com/snoack/flake8-per-file-ignores
 # You can completely or partially disable our custom checks,
@@ -83,8 +82,7 @@ multi_line_output = 3
 include_trailing_comma = true
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 default_section = FIRSTPARTY
-# Should be: 80 - 1
-line_length = 79
+line_length = 80
 
 [darglint]
 # darglint configuration: https://github.com/terrencepreilly/darglint
@@ -92,7 +90,7 @@ strictness = long
 
 [mypy]
 # The mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
-python_version = 3.7
+python_version = 3.8
 
 allow_redefinition = False
 check_untyped_defs = True
@@ -111,8 +109,7 @@ no_implicit_optional = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
-# TODO: Change back to True after installing mypy version 0.770 or higher
-warn_unreachable = False
+warn_unreachable = True
 warn_no_return = True
 
 plugins =
