--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -74,6 +74,7 @@ djangorestframework-stubs = "^1.1"
 
 ipython = "^7.11"
 jupyter = "^1.0"
+PrettyTable = "&0.7"
 
 yamllint = "^1.20"
 safety = "^1.8"
